[package]
name = "rvv-vroom"
description = "Hand tuned RISC-V vector instruction inner loops"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/rvv-vroom"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
num-complex = "0.4.6"
volk = {version= "0.1.9", path="../volk-rs"}

[lib]
name = "rvv_vroom"
path = "src/lib.rs"
